# Open-Amp

./: .gitignore  OpenAmp-v1.1.0.apk.idsig  OpenAmp-v1.2.0.apk.idsig  openamp-linux-x64  openamp-linux-x86_64
android/app/: build.gradle
android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  JniBridge.cpp
android/app/src/main/java/com/openamp/: MainActivity.kt
android/app/src/main/java/com/openamp/ui/: NeonLiveButton.kt
android/app/src/main/res/layout/: activity_main.xml
build-tests/: CTestTestfile.cmake
build-tests/tests/: CTestTestfile.cmake  dsp-unit-tests
dsp-core/include/openamp/: dsp_constants.h  fft_convolver.h  ir_loader.h
dsp-core/plugins/cabinet/: cabinet.cpp
dsp-core/plugins/recorder/: recorder.cpp  recorder.h
dsp-core/src/: amp_simulator.cpp  dsp_engine.cpp  ir_loader.cpp
dsp-core/tests/: CMakeLists.txt  test_amp_simulator.cpp  test_delay.cpp  test_dsp_utils.cpp  test_main.cpp  test_reverb.cpp
ios/OpenAmp/: Info.plist
ios/OpenAmp.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt  PKGBUILD
linux/resources/: openamp.desktop
linux/src/audio/: audio_backend.cpp  jack_backend.cpp  jack_backend.h  pipewire_direct_backend.cpp  pipewire_direct_backend.h
linux/src/ui/: effects_panel.cpp  effects_panel.h  knob_widget.cpp  main_window.cpp  meter_widget.cpp  preset_browser.cpp  theme.h
